--- a/index.html
+++ b/index.html
@@ -1,3 +1,6 @@
+
+<DOCUMENT filename="MJ_RODE_updated_with_leetcode.html">
+
 <!DOCTYPE html>
 
 <html lang="en">
@@ -318,7 +321,6 @@
             .container { padding: 0 1rem; }
         }
     </style>
-
 <style>
     .algorithm-card.selected {
         border: 2px solid #10b981; /* Beautiful green border */
@@ -333,7 +335,6 @@
         background-color: rgba(239, 68, 68, 0.2); /* Red background */
     }
 </style>
-
 <style>
     /* Glowing green border for selected task cards */
     .task-card.selected {
@@ -550,7 +551,7 @@
 <li class="task-card fullstack-card">
 <input class="custom-checkbox" id="binary-search" type="checkbox"/>
 <div>
-<a class="link-item" href="https://leetcode.com/problems/binary-search/ " target="_blank">Binary Search</a>
+<a class="link-item" href="https://leetcode.com/problems/binary-search/" target="_blank">LeetCode Problem</a><br/><a class="link-item" href="https://leetcode.com/problems/binary-search/ " target="_blank">Binary Search</a>
 <div class="tags">
 <span class="library-tag">Python Built-in</span>
 <span class="difficulty-tag">Easy</span>
@@ -561,7 +562,7 @@
 <li class="task-card fullstack-card">
 <input class="custom-checkbox" id="merge-sort" type="checkbox"/>
 <div>
-<a class="link-item" href="https://leetcode.com/problems/sort-list/ " target="_blank">Merge Sort</a>
+<a class="link-item" href="https://leetcode.com/problems/sort-an-array/" target="_blank">LeetCode Problem</a><br/><a class="link-item" href="https://leetcode.com/problems/sort-list/ " target="_blank">Merge Sort</a>
 <div class="tags">
 <span class="library-tag">Python Built-in</span>
 <span class="difficulty-tag">Medium</span>
@@ -572,7 +573,7 @@
 <li class="task-card fullstack-card">
 <input class="custom-checkbox" id="bubble-sort" type="checkbox"/>
 <div>
-<a class="link-item" href="https://www.geeksforgeeks.org/bubble-sort/ " target="_blank">Bubble Sort</a>
+<a class="link-item" href="https://leetcode.com/problems/sort-an-array/" target="_blank">LeetCode Problem</a><br/><a class="link-item" href="https://www.geeksforgeeks.org/bubble-sort/ " target="_blank">Bubble Sort</a>
 <div class="tags">
 <span class="library-tag">Python Built-in</span>
 <span class="difficulty-tag">Easy</span>
@@ -583,7 +584,7 @@
 <li class="task-card fullstack-card">
 <input class="custom-checkbox" id="hash-table" type="checkbox"/>
 <div>
-<a class="link-item" href="https://leetcode.com/problems/two-sum/ " target="_blank">Hash Table Basics</a>
+<a class="link-item" href="https://leetcode.com/problems/two-sum/" target="_blank">LeetCode Problem</a><br/><a class="link-item" href="https://leetcode.com/problems/two-sum/ " target="_blank">Hash Table Basics</a>
 <div class="tags">
 <span class="library-tag">Python Built-in</span>
 <span class="difficulty-tag">Easy</span>
@@ -761,7 +762,7 @@
 <li class="task-card fullstack-card">
 <input class="custom-checkbox" id="bfs-dfs" type="checkbox"/>
 <div>
-<a class="link-item" href="https://leetcode.com/tag/breadth-first-search/ " target="_blank">BFS/DFS</a>
+<a class="link-item" href="https://leetcode.com/problems/number-of-islands/" target="_blank">LeetCode Problem</a><br/><a class="link-item" href="https://leetcode.com/tag/breadth-first-search/ " target="_blank">BFS/DFS</a>
 <div class="tags">
 <span class="library-tag">networkx</span>
 <span class="difficulty-tag">Medium</span>
@@ -864,7 +865,7 @@
 <li class="task-card fullstack-card">
 <input class="custom-checkbox" id="dynamic-programming" type="checkbox"/>
 <div>
-<a class="link-item" href="https://leetcode.com/tag/dynamic-programming/ " target="_blank">Dynamic Programming</a>
+<a class="link-item" href="https://leetcode.com/problems/climbing-stairs/" target="_blank">LeetCode Problem</a><br/><a class="link-item" href="https://leetcode.com/tag/dynamic-programming/ " target="_blank">Dynamic Programming</a>
 <div class="tags">
 <span class="library-tag">Python Built-in</span>
 <span class="difficulty-tag">Hard</span>
@@ -1091,7 +1092,6 @@
             });
         }
     </script>
-
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         const algorithmCards = document.querySelectorAll('.algorithm-card');
@@ -1124,7 +1124,6 @@
         });
     });
 </script>
-
 <script>
     document.addEventListener('DOMContentLoaded', function() {
         // Initialize checkboxes and load saved state
@@ -1281,3 +1280,5 @@
 </script>
 </body>
 </html>
+
+</DOCUMENT>
